calls that can be updated must be updated at that time.


**************
* DEPRECATED *
**************

The items listed below are interfaces that are deprecated.  They are
categorized by the release in which the change was made.  If the
change involved a removal of a command or function, both the original
and new names should be listed for reference.


7.26
----
rtrad, bot_shell-vtk, rt_bot_faces, g-nmg, nmg-bot, nmg-rib, nmg-sgp, plot3-hpgl,
plot3-tk, plot3-X, fix_polysolids, terrain, pixinfo.sh, png_info, dbcp, buffer,
hex, bw-d, c-d, d-bw, d-f, d-i, d-u, f-d, f-i, i-d, -if, u-bw, u-d, u-f
	remove obsolete commands [deprecated 7.26]
include/bu/cmd.h
	remove struct bu_cmdhist and struct bu_cmdhist_obj [deprecated 7.26]
	BU_CMDHIST_NULL, BU_CMDHIST_OBJ_NULL, bu_cmdhist_histor, bu_cmdhist_add,
	bu_cmdhist_curr, bu_cmdhist_nest, bu_cmdhist_prev [deprecated 7.26]
fb-rle, rle-fb, bw-rle, pix-rle, rle-pix
        All tools focused specifically on the RLE image format. [deprecated 7.26]
nirt
	-T - use LIBRT_BOT_MINTIE environment variable instead [deprecated 7.26]
all global variables
	global variables are no longer considered published public API [deprecated 7.26]
        bn_mat_identity -> MAT_INIT_IDN or MAT_IDN() or NULL
include/bn.h
	tp_setup, no longer needs to be public API [deprecated 7.26]
include/raytrace.h
	curve_to_tcl_list
	db_full_path_appendresult tcl_obj_to_int_array
	tcl_obj_to_fastf_array tcl_list_to_int_array
	tcl_list_to_fastf_array *_tcl_*, removal of all tcl-specific
	API functions [deprecated 7.26]
	db_regexp_match_all() -> db_ls() [deprecated 7.26]
include/tclcad.h
	tclcad_bn_mat_print tclcad_rt_parse_ray tclcad_rt_pr_cutter
	tclcad_rt_pr_hit tclcad_rt_rt tclcad_rt_import_from_path, removal of all
        tcl-specific API functions [deprecated 7.26]
pixcut, pixpaste
        copyright cleanup [deprecated 7.26]
librt, fast4-g
	removal of CLINE entity support [deprecated 7.26]
kill, killtree, killall, killrefs